# bandcamp-link-scraper

./: Dockerfile  README.md  get_album_songs.py  pyproject.toml
src/bandcamp_link_scraper/: api.py  get_album_songs.py  get_songs.py
