[project]
name = "bandcamp-link-scraper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Iztok Bajcar", email = "iztok.bajcar@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
